<?xml version="1.0"?>
<package>
  <name>ranged_finder</name>
  <version>0.0.0</version>
  <description>A package </description>

  <maintainer email="qoo810823@gmail.com">Alyson(Ying-Hua) Chen</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
